# weso-lang

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: weso.ebnf
examples/: exp1.weso
src/: lib.rs  main.rs
src/base/: ast.rs  func.rs  mod.rs  object.rs  opcode.rs  scope.rs  types.rs
src/parser/: lexer.rs  liter.rs  mod.rs  token.rs  weso.lalrpop  weso.rs
src/vm/: builtin.rs  convert.rs  global.rs  mod.rs  runtime.rs  wasm.rs
