[package]
name = "weso-lang"
version = "0.1.0"
authors = ["GyDi <segydi@foxmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

lalrpop-util = "0.18.1"
regex = "1"
logos = "^0.11.0"
lazy_static = "1.4.0"

[build-dependencies]
lalrpop = { version = "^0.18.1", features = ["lexer"] }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
